--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@react-google-maps/api": "^2.12.0",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "axios": "^0.27.2",
     "react": "latest",
     "react-dom": "latest",
     "react-scripts": "latest",
