--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@react-google-maps/api": "^2.12.0",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@types/string-similarity": "^4.0.0",
     "@types/uuid": "^8.3.4",
     "axios": "^0.27.2",
     "react": "latest",
     "react-dom": "latest",
     "react-scripts": "latest",
+    "string-similarity": "^4.0.4",
     "typescript": "latest",
     "uuid": "^8.3.2"
   },
